--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,10 @@
   align-content: space-between;
   gap: 20px;
 }
+
+img {
+  width: 100%;
+  height: auto;
+  max-height: 220px;
+  aspect-ratio: 1 / 1;
+}
