implemented all functionalities to rating

--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,10 @@
   max-height: 220px;
   object-fit: cover; 
 }
+
+.star-image {
+  width: 100%;
+  height: auto;
+  max-height: 25px;
+  object-fit: cover; 
+}
